# dhe

./: Cargo.toml  LICENSE  README.md  add_rights  commands.toml
dhe_gui/: Cargo.toml
dhe_gui/src/: gui.rs  main.rs
dhe_menu/: Cargo.toml
dhe_menu/src/: config.rs  db.rs  main.rs  state.rs
dhe_menu/src/entity/: dish.rs  dish_product.rs  dishes_scheme.rs  menu.rs  menu_data.rs  mod.rs  prelude.rs  product.rs
dhe_menu/src/migration/: m20230628_144053_create_table.rs  mod.rs
dhe_menu/src/rest/: dish.rs  dishes_scheme.rs  error.rs  menu.rs  mod.rs  product.rs
dhe_node/: Cargo.toml
dhe_node/src/: main.rs
dhe_sdk/: Cargo.toml
dhe_sdk/src/: language.rs  lib.rs  translate.rs
dhe_sdk/src/algorithm/: allocator.rs  intervals.rs  mod.rs  regexp.rs
dhe_sdk/src/keyboard/: keys.rs  mod.rs
dhe_sdk_macros/: Cargo.toml
dhe_translate/: Cargo.toml
dhe_translate/src/: main.rs
dhe_worker/: Cargo.toml
dhe_worker/src/: action_listener.rs  cli_command.rs  main.rs  translate.rs
hints/: Cargo.toml
hints/src/: lib.rs  mut_iter.rs
