[workspace.package]
version = "0.0.1"
authors = ["Stas Ivkin <109stas@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/IvkinStanislav/dhe"
rust-version = "1.76"
readme = "README.md"

[workspace]
members = [
    "dhe_menu",
    "dhe_translate",
    "dhe_sdk",
    "dhe_sdk_macros",
    "dhe_worker",
]

[workspace.dependencies]
serde = "1.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.38"
time = { version = "0.3.22", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"