[workspace.package]
version = "0.0.1"
authors = ["Stas Ivkin <109stas@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/IvkinStanislav/dhe"
readme = "README.md"

[workspace]
members = [
    "dhe_gui",
    "dhe_menu",
    "dhe_sdk",
    "dhe_sdk_macros",
    "dhe_worker",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
serde = "1.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.38"
time = { version = "0.3.37", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"