[package]
name = "dhe_menu"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
dhe_sdk = { path = "../dhe_sdk" }
dhe_sdk_macros = { path = "../dhe_sdk_macros" }
dirs = "5.0.1"
sea-orm = { version = "0.11.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = "1.0.164"
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
