[package]
name = "dhe_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dhe_sdk = { path = "../dhe_sdk" }
dhe_sdk_macros = { path = "../dhe_sdk_macros" }
homedir = "0.2.1"
serde = { workspace = true }
toml = "0.8.10"
tracing = { workspace = true }
